# tayga

./: .hgtags  Makefile.am  Makefile.in  README  addrmap.c  conffile.c  configure  configure.ac  tayga.8  tayga.c  tayga.conf.5  tayga.conf.example  tayga.service  tayga_0.9.2.orig.tar.bz2.delta  tayga_0.9.2.orig.tar.bz2.id
debian/: README.source  changelog  control  copyright  default  docs  gbp.conf  init  manpages  rules  tayga.8  watch
debian/patches/: 0003-configure-no-CFLAGS.patch  0007-static-EAM.patch  0008-manpage-RFC.patch  0009-systemd-service-file-for-tayga.patch  01-use-var-spool  01-use-var-spool.patch  02-manpage.patch  03-configure-no-CFLAGS.patch  04-quote-make-var.patch  05-guard-chdir.patch  06-guard-write.patch  07-static-EAM.patch  08-manpage-RFC.patch  series
rpm/: tayga.spec
